# Toshokan

./: .gitignore  HANDOFF.md  PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
Readmes/: Idolmancer_PLAN.md  Inventorois_README.md  Sando_README.md
design/: Toshokan Development Doc-print-1qwf48c.html  Toshokan Development Doc.html  Toshokan.html
design/Readmes/: Frog_Budget_README.md  Idolmancer_README.md  Jagaimo_README.md  Kani-miso_README.md  Plastiglom_README.md
design/toshokan/: ASSETS.md  data.js  page-project.jsx  page-projects.jsx  tokens.css
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: config.rs  envfile.rs  fsview.rs  lib.rs  logparse.rs  manifest.rs  meta.rs  model.rs  scanner.rs  schedule.rs  summary.rs  supervisor.rs  timefmt.rs
src-tauri/core/tests/: git_repo.rs  seed_manifests.rs  supervisor_proc.rs
src-tauri/manifests/: frogbudget.yml  idolmancer.yml  inventorois.yml  jagaimo.yml  kanimiso.yml  plastiglom.yml  sando.yml
src-tauri/src/: commands.rs  lib.rs  main.rs  services.rs  state.rs  util.rs  watcher.rs
src/components/: MarkdownView.tsx  shared.tsx
src/ipc/: config.ts  fixtures.ts  fsview.ts  index.ts  meta.ts  projects.ts  services.ts  types.ts  updates.ts
src/lib/: format.ts
src/pages/: ProjectPage.tsx  ProjectsPage.tsx  ServicesPage.tsx  SettingsPage.tsx
src/theme/: tokens.css
toshokan/: ASSETS.md  app.jsx  page-services.jsx  page-settings.jsx  shared.jsx
