[workspace]
members = ["core"]

[package]
name = "toshokan"
version = "0.5.0"
description = "Local-first desktop launcher and control room for a developer's personal workspace."
authors = ["Connoise"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "toshokan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
toshokan-core = { path = "core" }

# Phase 3+ will add: sysinfo (telemetry). The supervisor (C5/C6) lands behind a
# desktop-only capability boundary.
