[package]
name = "toshokan-core"
version = "0.5.0"
edition = "2021"
description = "Pure (tauri-free) core logic for Toshokan: git, filesystem, and notes enrichment."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cron = "0.12"
# Read-only local git only (C2). Vendored libgit2 avoids a system dependency.
# https/ssh (needed for C9 fetch) are added in Phase 4.
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
